package com.openim.common.im.bean.protbuf;

option java_outer_classname = "ProtobufChatMessage";

message ChatMessage {
  optional string from = 1;
  optional string to = 2;
  optional string msg = 3;
  optional uint32 chatType = 4;
}